# multi-agent-research

./: README.md  main.py  pyproject.toml  requirements.txt
app/agents/: reader_agent.py  search_agent.py
app/api/: routes.py
app/chains/: critic.py  writer.py
app/core/: config.py  utils.py
app/pipeline/: research_pipeline.py
app/tools/: scraper.py  web_search.py
frontend/: index.html
